[tool.poetry]
name = "csb"
version = "0.1.0"
description = ""
authors = ["Ville Salmela <villesalmela@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
